--- a/predict_reviews.ipynb
+++ b/predict_reviews.ipynb
@@ -44,68 +44,7 @@
     {
      "data": {
       "text/plain": [
-       "0                               Wow... Loved this place.\n",
-       "1                                     Crust is not good.\n",
-       "2              Not tasty and the texture was just nasty.\n",
-       "3      Stopped by during the late May bank holiday of...\n",
-       "4      The selection on the menu was great and so wer...\n",
-       "5         Now I am getting angry and I want my damn pho.\n",
-       "6                  Honeslty it didn't taste THAT fresh.)\n",
-       "7      The potatoes were like rubber and you could te...\n",
-       "8                              The fries were great too.\n",
-       "9                                         A great touch.\n",
-       "10                              Service was very prompt.\n",
-       "11                                    Would not go back.\n",
-       "12     The cashier had no care what so ever on what I...\n",
-       "13     I tried the Cape Cod ravoli, chicken, with cra...\n",
-       "14     I was disgusted because I was pretty sure that...\n",
-       "15     I was shocked because no signs indicate cash o...\n",
-       "16                                   Highly recommended.\n",
-       "17                Waitress was a little slow in service.\n",
-       "18     This place is not worth your time, let alone V...\n",
-       "19                                  did not like at all.\n",
-       "20                                   The Burrittos Blah!\n",
-       "21                                    The food, amazing.\n",
-       "22                                 Service is also cute.\n",
-       "23     I could care less... The interior is just beau...\n",
-       "24                                    So they performed.\n",
-       "25     That's right....the red velvet cake.....ohhh t...\n",
-       "26            - They never brought a salad we asked for.\n",
-       "27     This hole in the wall has great Mexican street...\n",
-       "28     Took an hour to get our food only 4 tables in ...\n",
-       "29                     The worst was the salmon sashimi.\n",
-       "                             ...                        \n",
-       "970    I immediately said I wanted to talk to the man...\n",
-       "971                      The ambiance isn't much better.\n",
-       "972    Unfortunately, it only set us up for disapppoi...\n",
-       "973                                The food wasn't good.\n",
-       "974    Your servers suck, wait, correction, our serve...\n",
-       "975        What happened next was pretty....off putting.\n",
-       "976    too bad cause I know it's family owned, I real...\n",
-       "977                 Overpriced for what you are getting.\n",
-       "978                 I vomited in the bathroom mid lunch.\n",
-       "979    I kept looking at the time and it had soon bec...\n",
-       "980    I have been to very few places to eat that und...\n",
-       "981    We started with the tuna sashimi which was bro...\n",
-       "982                              Food was below average.\n",
-       "983    It sure does beat the nachos at the movies but...\n",
-       "984         All in all, Ha Long Bay was a bit of a flop.\n",
-       "985    The problem I have is that they charge $11.99 ...\n",
-       "986    Shrimp- When I unwrapped it (I live only 1/2 a...\n",
-       "987       It lacked flavor, seemed undercooked, and dry.\n",
-       "988    It really is impressive that the place hasn't ...\n",
-       "989    I would avoid this place if you are staying in...\n",
-       "990    The refried beans that came with my meal were ...\n",
-       "991           Spend your money and time some place else.\n",
-       "992    A lady at the table next to us found a live gr...\n",
-       "993              the presentation of the food was awful.\n",
-       "994             I can't tell you how disappointed I was.\n",
-       "995    I think food should have flavor and texture an...\n",
-       "996                             Appetite instantly gone.\n",
-       "997    Overall I was not impressed and would not go b...\n",
-       "998    The whole experience was underwhelming, and I ...\n",
-       "999    Then, as if I hadn't wasted enough of my life ...\n",
-       "Name: Review, Length: 1000, dtype: object"
+       "1000"
       ]
      },
      "execution_count": 2,
@@ -115,7 +54,7 @@
    ],
    "source": [
     "dataset = pd.read_csv(\"Restaurant_Reviews.tsv\", sep='\\t', encoding='utf-8')\n",
-    "dataset.Review"
+    "len(dataset)"
    ]
   },
   {
@@ -292,7 +231,8 @@
     "# corpus is a collection of text\n",
     "# data cleaning steps\n",
     "# 1. Remove punctuation, 2. Remove numbers and 3. Lowercase letters\n",
-    "porter = nltk.PorterStemmer()"
+    "porter = nltk.PorterStemmer()\n",
+    "corpus =[]"
    ]
   },
   {
@@ -301,17 +241,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def cleaning_and_stemming(text):\n",
+    "for text in dataset.Review:\n",
     "    text = text.lower()  # converting text into lowercase\n",
     "    text = re.sub('\\[.*?\\]', '', text)  # removing .,*,?,.... symbols\n",
     "    text = re.sub('[%s]' % re.escape(string.punctuation), '', text)  # revoming punctuation\n",
     "    text = re.sub('\\w*\\d\\w*', '', text)  # removing numbers\n",
+    "    text = re.sub(\"[^a-zA-Z]\", ' ', text)\n",
     "    words = text.split()  # spliting sentence into words\n",
     "    # stemming is the process of extracting root word from a word\n",
     "    # stop words are those which express state of words like a, an, as, those, when etc.\n",
     "    stem_words = [ porter.stem(word) for word in words if word not in set( nltk.corpus.stopwords.words('english') ) ]\n",
     "    stemmed_sentence = ' '.join(stem_words)\n",
-    "    return stemmed_sentence"
+    "    corpus.append( stemmed_sentence )"
    ]
   },
   {
@@ -320,88 +261,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# re-aranging reviews with cleaned review\n",
-    "cleaned_review = lambda review: cleaning_and_stemming(review)\n",
-    "dataset.Review = dataset.Review.apply(cleaned_review)"
+    "# re-aranging reviews with cleaned review\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Review</th>\n",
-       "      <th>Liked</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>wow love place</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>crust good</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>tasti textur nasti</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>stop late may bank holiday rick steve recommen...</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>select menu great price</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                              Review  Liked\n",
-       "0                                     wow love place      1\n",
-       "1                                         crust good      0\n",
-       "2                                 tasti textur nasti      0\n",
-       "3  stop late may bank holiday rick steve recommen...      1\n",
-       "4                            select menu great price      1"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dataset.head()"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -412,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -424,19 +292,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "tokenizer = CountVectorizer( max_features = 10000 )\n",
-    "tokenized_data = tokenizer.fit_transform( dataset.Review )\n",
-    "document_term_matrix = pd.DataFrame( tokenized_data.toarray(), columns=tokenizer.get_feature_names() )\n",
+    "tokenized_data = tokenizer.fit_transform( corpus ).toarray()\n",
+    "document_term_matrix = pd.DataFrame( tokenized_data, columns=tokenizer.get_feature_names() )\n",
     "document_term_matrix.index = dataset.index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +474,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 1608 columns</p>\n",
+       "<p>5 rows × 1610 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -631,10 +499,10 @@
        "3    0      0     0  \n",
        "4    0      0     0  \n",
        "\n",
-       "[5 rows x 1608 columns]"
+       "[5 rows x 1610 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,20 +520,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "X = document_term_matrix\n",
+    "X = tokenized_data\n",
     "y = dataset['Liked']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "scrolled": true
    },
@@ -682,7 +550,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +582,7 @@
        "          tol=0.0001, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +614,7 @@
        "  shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -772,7 +640,7 @@
        "            splitter='best')"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -791,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -810,17 +678,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Random forest: 76.58862876254182\n",
-      "Logistic Regression: 80.60200668896321\n",
-      "Support Vector: 48.49498327759198\n",
-      "Decision Tree: 72.90969899665552\n"
+      "Random forest: 75.25083612040135\n",
+      "Logistic Regression: 78.92976588628763\n",
+      "Support Vector: 49.49832775919732\n",
+      "Decision Tree: 71.57190635451505\n"
      ]
     }
    ],
@@ -840,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -848,17 +716,17 @@
      "output_type": "stream",
      "text": [
       "Random forest:\n",
-      "[[121  46]\n",
-      " [ 24 108]]\n",
+      "[[134  57]\n",
+      " [ 17  91]]\n",
       "Logistic Regression:\n",
-      "[[121  34]\n",
-      " [ 24 120]]\n",
+      "[[125  37]\n",
+      " [ 26 111]]\n",
       "Support Vector:\n",
-      "[[145 154]\n",
-      " [  0   0]]\n",
+      "[[  0   0]\n",
+      " [151 148]]\n",
       "Decision Tree:\n",
-      "[[108  44]\n",
-      " [ 37 110]]\n"
+      "[[120  54]\n",
+      " [ 31  94]]\n"
      ]
     }
    ],
@@ -882,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -894,42 +762,42 @@
       "Random forest:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.72      0.78       167\n",
-      "           1       0.70      0.82      0.76       132\n",
+      "           0       0.89      0.70      0.78       191\n",
+      "           1       0.61      0.84      0.71       108\n",
       "\n",
-      "   micro avg       0.77      0.77      0.77       299\n",
-      "   macro avg       0.77      0.77      0.77       299\n",
-      "weighted avg       0.78      0.77      0.77       299\n",
+      "   micro avg       0.75      0.75      0.75       299\n",
+      "   macro avg       0.75      0.77      0.75       299\n",
+      "weighted avg       0.79      0.75      0.76       299\n",
       "\n",
       "Logistic Regression:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.83      0.78      0.81       155\n",
-      "           1       0.78      0.83      0.81       144\n",
+      "           0       0.83      0.77      0.80       162\n",
+      "           1       0.75      0.81      0.78       137\n",
       "\n",
-      "   micro avg       0.81      0.81      0.81       299\n",
-      "   macro avg       0.81      0.81      0.81       299\n",
-      "weighted avg       0.81      0.81      0.81       299\n",
+      "   micro avg       0.79      0.79      0.79       299\n",
+      "   macro avg       0.79      0.79      0.79       299\n",
+      "weighted avg       0.79      0.79      0.79       299\n",
       "\n",
       "Support Vector:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       1.00      0.48      0.65       299\n",
-      "           1       0.00      0.00      0.00         0\n",
+      "           0       0.00      0.00      0.00         0\n",
+      "           1       1.00      0.49      0.66       299\n",
       "\n",
-      "   micro avg       0.48      0.48      0.48       299\n",
-      "   macro avg       0.50      0.24      0.33       299\n",
-      "weighted avg       1.00      0.48      0.65       299\n",
+      "   micro avg       0.49      0.49      0.49       299\n",
+      "   macro avg       0.50      0.25      0.33       299\n",
+      "weighted avg       1.00      0.49      0.66       299\n",
       "\n",
       "Decision Tree:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.74      0.71      0.73       152\n",
-      "           1       0.71      0.75      0.73       147\n",
+      "           0       0.79      0.69      0.74       174\n",
+      "           1       0.64      0.75      0.69       125\n",
       "\n",
-      "   micro avg       0.73      0.73      0.73       299\n",
-      "   macro avg       0.73      0.73      0.73       299\n",
-      "weighted avg       0.73      0.73      0.73       299\n",
+      "   micro avg       0.72      0.72      0.72       299\n",
+      "   macro avg       0.71      0.72      0.71       299\n",
+      "weighted avg       0.73      0.72      0.72       299\n",
       "\n"
      ]
     },
@@ -951,6 +819,76 @@
     "print(classification_report(svc_prediction, y_test))\n",
     "print(\"Decision Tree:\")\n",
     "print(classification_report(decision_tree_prediction, y_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_review(text):\n",
+    "    predict_corpus = []\n",
+    "    text = text.lower()\n",
+    "    text = re.sub('\\[.*?\\]', ' ', text)\n",
+    "    text = re.sub('[%s]' % re.escape(string.punctuation), ' ', text)\n",
+    "    text = re.sub('\\w*\\d\\w*', ' ', text)\n",
+    "    text = re.sub(\"[^a-zA-Z]\", ' ', text)\n",
+    "    words = text.split()\n",
+    "    stem_words = [ porter.stem(word) for word in words if word not in set( nltk.corpus.stopwords.words('english') ) ]\n",
+    "    stemmed_sentence = ' '.join(stem_words)\n",
+    "    predict_corpus.append( stemmed_sentence )\n",
+    "    tokenizer = CountVectorizer(max_features = 10000)\n",
+    "    tokenized_data = tokenizer.fit_transform(corpus + predict_corpus).toarray()\n",
+    "    X = tokenized_data[-1].reshape(1, -1)\n",
+    "    prediction = random_forest_classifier.predict(X)\n",
+    "    if prediction == 1:\n",
+    "        return \"Positive\"\n",
+    "    else:\n",
+    "        return \"Negative\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "food was good\n",
+      "Positive\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predict_review(input()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "worst taste and service quality is poor\n",
+      "Negative\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(predict_review(input()))"
    ]
   },
   {
